fix top cutoff on iphone

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  margin-top: 3rem;
 }
 
 .card-grid {
@@ -20,6 +20,10 @@ body {
 }
 
 @media (min-width: 40rem) {
+  body {
+    margin-top: 0;
+    justify-content: center;
+  }
   .card-grid {
     grid-template-columns: repeat(2, 1fr);
   }
